Created SQL package

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,4 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:text="@string/change_me"
-    tools:context="com.androideduio.datapersistance.ui.MainActivity" />
+    tools:context=".ui.sharedpref.MainActivity" />
